--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,25 @@ export(df_extractor)
 export(gene_grapher)
 export(gene_ranker)
 export(gsea_plotter)
-export(gsea_res_plot)
+export(gsea_replot)
 export(top_plotter)
 import(Seurat)
 import(colorspace)
 import(data.table)
-import(dplyr)
 import(fgsea)
 import(ggplot2)
 import(ggpubr)
 import(grid)
 import(gridExtra)
 import(gtools)
-import(purrr)
-import(stringr)
-import(tibble)
+importFrom(BWStest,bws_stat)
+importFrom(dplyr,filter)
+importFrom(dplyr,filter_)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(gridExtra,grid.arrange)
+importFrom(gtools,mixedsort)
 importFrom(magrittr,"%>%")
+importFrom(purrr,set_names)
+importFrom(stringr,str_replace_all)
+importFrom(tibble,add_column)
