--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,15 @@ Title: Deal With Your Single Cell RNAseq Data With Ease
 Version: 0.1.0
 Author: Atakan Ekiz
 Maintainer: Atakan Ekiz <atakanekiz@gmail.com>
-Description: A collection of functions that facilitate highthroughput data analysis. Most of the functions were written with single cell RNA sequencing (scRNAseq) in mind. Overall goal of this package is managing complex data structures and extracting data that can be directly used with other packages in the R environment.
+Description: A collection of functions that facilitate high throughput data analysis. Most of the functions were written with single cell RNA sequencing (scRNAseq) in mind. Overall goal of this package is managing complex data structures and extracting data that can be directly used with other packages in the R environment.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0)
 biocViews:
-Imports: gtools, dplyr, stringr, purrr, colorspace, gtools, ggplot2
+Imports: gtools, dplyr, stringr, purrr, colorspace, gtools, ggplot2, Seurat, data.table, fgsea, data.table, ggpubr, grid, gridExtra
 RoxygenNote: 7.0.2
-Suggests: 
+Suggests:
     testthat,
     knitr,
     rmarkdown
